fix horizontal scroll and mobile nav sizing

--- a/scss/ee.css
+++ b/scss/ee.css
@@ -11,10 +11,10 @@
   .nav ul.opening {
     display: block;
     text-align: center;
-    font-size: 50px;
+    font-size: 35px;
     font-weight: 700;
-    background: url("../images/triangles/triangles-darkgreen.svg") top;
-    background-size: 100%; }
+    background: url("https://res.cloudinary.com/mtreeves24/image/upload/c_crop,f_auto,g_center,h_1600,q_60,w_1200/v1600105784/Exotic%20Explorers/triangles-darkgreen.svg") no-repeat center;
+    background-size: 1200px; }
   .nav li {
     opacity: 0.95;
     border-bottom: 1px solid #f6f4e2;
@@ -39,10 +39,10 @@
   margin: 0;
   width: 100%; }
   .dropdown li {
-    border: 0.1px solid white;
+    outline: 0.1px solid white;
     background-size: 300%;
     font-size: 0.6em;
-    height: 70px; }
+    height: 40px; }
 
 .dropdown-hide {
   display: none; }
